--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,11 +1,10 @@
-<%= render partial: 'layouts/form_errors', locals: {resource: comment} if comment.errors.any? %>
-<%= form_for(comment, url: {controller: :comments, action: :create}, html: {class: 'form'}) do |f| %>
+<%= form_for comment, url: {controller: :comments, action: :create}, html: {class: 'form'} do |f| %>
     <div class="form-group">
       <%= f.label :comment, class: 'control-label' %>
       <%= f.text_area :body, class: 'form-control' %>
     </div>
     <div class="form-group">
-      <%= f.hidden_field :goal_id, value: goal.id %>
+      <%= f.hidden_field :goal_id, value: @goal.id %>
       <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.submit class: 'btn btn-default' %>
     </div>
