--- a/app/views/devise/menu/_dropdown_menu.html.erb
+++ b/app/views/devise/menu/_dropdown_menu.html.erb
@@ -1,21 +1,18 @@
 <ul class="dropdown-menu" role="menu">
   <% if user_signed_in? %>
-      <% if current_page?(user_path current_user) %>
-          <li class="active"><%= link_to(user_path current_user) do %><i class="glyphicon glyphicon-share"></i> Show
-                Profile
-            <% end %></li>
+      <% if current_page? current_user %>
+          <li class="active">
       <% else %>
-          <li><%= link_to(user_path current_user) do %><i class="glyphicon glyphicon-share"></i> Show Profile
-            <% end %></li>
-      <% end %>
-      <% if current_page?(edit_user_registration_path current_user) %>
-          <li class="active"><%= link_to(edit_user_registration_path) do %><i class="glyphicon glyphicon-edit"></i> Edit
-                Profile
-            <% end %></li>
+          <li>
+      <% end %><%= link_to current_user do %>
+          <i class="glyphicon glyphicon-share"></i> Show Profile
+      <% end %></li>
+      <% if current_page? edit_user_registration_path %>
+          <li class="active">
       <% else %>
-          <li><%= link_to(edit_user_registration_path) do %><i class="glyphicon glyphicon-edit"></i> Edit Profile
-            <% end %></li>
-      <% end %>
+          <li>
+      <% end %><%= link_to edit_user_registration_path do %><i class="glyphicon glyphicon-edit"></i> Edit Profile
+      <% end %></li>
       <li class="divider"></li>
       <li><%= link_to(destroy_user_session_path, method: :delete) do %>
             <i class="glyphicon glyphicon-log-out"></i> Sign out
