--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,51 +1,56 @@
-<%= content_for :page_title, I18n.t('users.registration.title.edit') %>
-<div class="row">
-  <ul class="list-group">
-    <li class="list-group-item">
-      <%= devise_error_messages! %>
-      <%= render partial: 'users/controls', locals: {user: resource} %>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put, role: 'form', class: 'form'}) do |f| %>
-          <div class="authform">
-            <div class="form-group">
-              <%= f.label :name, class: 'control-label' %>
-              <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: 'Name' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :email, class: 'control-label' %>
-              <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
-              <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-                  <div class="help-block">
-                    Currently waiting confirmation for: <%= resource.unconfirmed_email %>
-                  </div>
-              <% end %>
-            </div>
-            <fieldset>
-              <div class="form-group">
-                <%= f.label :password, class: 'control-label' %>
-                <%= f.password_field :password, autocomplete: 'off', class: 'form-control', placeholder: 'New Password' %>
-              </div>
-              <div class="form-group">
-                <%= f.label :password_confirmation, class: 'control-label' %>
-                <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'New Password' %>
-                <div class="help-block">
-                  Leave these fields blank if you don't want to change your password.
-                </div>
-              </div>
-            </fieldset>
-            <fieldset>
-              <div class="form-group">
-                <%= f.label :current_password, class: 'control-label' %>
-                <%= f.password_field :current_password, class: 'form-control', placeholder: 'Current Password' %>
-                <div class="help-block">
-                  You must enter your current password to make changes.
-                </div>
-              </div>
-            </fieldset>
-            <div class="actions form-group">
-              <%= f.submit 'Update', class: 'btn btn-default' %>
-            </div>
-          </div>
+<%= content_for :page_title, t('users.registration.title.edit') %>
+<% content_for :nav, render('dropdown_menu') %>
+<%= devise_error_messages! %>
+<%= render layout: 'layouts/list_group' do %>
+    <h5 align="center">
+      <%= link_to resource do %>
+          <i class="glyphicon glyphicon-search"></i> Show
       <% end %>
-    </li>
-  </ul>
-</div>
+      | <i class="glyphicon glyphicon-pencil"></i> Edit
+      | <%= link_to registration_path(resource), data: {confirm: 'Are you sure?'}, method: :delete do %>
+          <i class="glyphicon glyphicon-trash"></i> Deactivate
+      <% end %>
+    </h5>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put, role: 'form', class: 'form'}) do |f| %>
+        <div class="authform">
+          <div class="form-group">
+            <%= f.label :name, class: 'control-label' %>
+            <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: 'Name' %>
+          </div>
+          <div class="form-group">
+            <%= f.label :email, class: 'control-label' %>
+            <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                <div class="help-block">
+                  Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+                </div>
+            <% end %>
+          </div>
+          <fieldset>
+            <div class="form-group">
+              <%= f.label :password, class: 'control-label' %>
+              <%= f.password_field :password, autocomplete: 'off', class: 'form-control', placeholder: 'New Password' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :password_confirmation, class: 'control-label' %>
+              <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'New Password' %>
+              <div class="help-block">
+                Leave these fields blank if you don't want to change your password.
+              </div>
+            </div>
+          </fieldset>
+          <fieldset>
+            <div class="form-group">
+              <%= f.label :current_password, class: 'control-label' %>
+              <%= f.password_field :current_password, class: 'form-control', placeholder: 'Current Password' %>
+              <div class="help-block">
+                You must enter your current password to make changes.
+              </div>
+            </div>
+          </fieldset>
+          <div class="actions form-group">
+            <%= f.submit 'Update', class: 'btn btn-default' %>
+          </div>
+        </div>
+    <% end %>
+<% end %>
