--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,27 @@
-<%= content_for :page_title, I18n.t('users.registration.title.new') %>
-<div class="row">
-  <ul class="list-group">
-    <li class="list-group-item">
-      <%= devise_error_messages! %>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {role: 'form', class: 'form'}) do |f| %>
-          <div class="authform">
-            <div class="form-group">
-              <%= f.label :name, class: 'control-label' %>
-              <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: 'Name' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :email, class: 'control-label' %>
-              <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :password, class: 'control-label' %>
-              <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :password_confirmation, class: 'control-label' %>
-              <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password' %>
-            </div>
-            <div class="form-group">
-              <%= f.submit 'Sign up', class: 'btn btn-default' %>
-            </div>
+<%= content_for :page_title, t('users.registration.title.new') %>
+<%= devise_error_messages! %>
+<%= render layout: 'layouts/list_group' do %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {role: 'form', class: 'form'}) do |f| %>
+        <div class="authform">
+          <div class="form-group">
+            <%= f.label :name, class: 'control-label' %>
+            <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: 'Name' %>
           </div>
-      <% end %>
-    </li>
-  </ul>
-</div>
+          <div class="form-group">
+            <%= f.label :email, class: 'control-label' %>
+            <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password, class: 'control-label' %>
+            <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password_confirmation, class: 'control-label' %>
+            <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password' %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Sign up', class: 'btn btn-default' %>
+          </div>
+        </div>
+    <% end %>
+<% end %>
