--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,2 +1,10 @@
-<%= content_for :page_title, I18n.t('goals.title.index') %>
-<%= render @goals %>
+<% cache ['v1', @goals] do %>
+    <%= content_for :page_title, t('goals.title.index') %>
+    <%= content_for :nav, render('form_search') %>
+    <% @goals.each do |goal| %>
+        <%= render layout: 'layouts/list_group' do %>
+            <%= render 'controls', goal: goal %>
+            <%= render goal %>
+        <% end %>
+    <% end %>
+<% end %>
