--- a/app/views/goals/subscribers.html.erb
+++ b/app/views/goals/subscribers.html.erb
@@ -1,2 +1,10 @@
-<%= content_for :page_title, I18n.t('goals.title.subscribers') %>
-<%= render partial: 'users/user', collection: @subscribers, as: :user %>
+<% cache ['v1', @subscribers] do %>
+    <%= content_for :page_title, t('goals.title.subscribers') %>
+    <%= content_for :nav, render('goals/dropdown_menu', goal: @goal) %>
+    <% @subscribers.each do |user| %>
+        <%= render layout: 'layouts/list_group' do %>
+            <%= render 'users/controls', user: user %>
+            <%= render 'users/user', user: user %>
+        <% end %>
+    <% end %>
+<% end %>
