--- a/app/views/pages/api.html.erb
+++ b/app/views/pages/api.html.erb
@@ -1,35 +1,32 @@
-<%= content_for :page_title, I18n.t('pages.api') %>
-<% user = User.demo_user %>
-<% goal = user.goals.find('008c10ce-7112-4ed0-9ddc-798d3d4067cc') %>
-<div class="row">
-  <ul class="list-group">
-    <li class="list-group-item">
-      <h4>Goals</h4>
-      <pre><%= link_to api_goals_path, api_goals_path %></pre>
-      <pre><%= link_to(search_api_goals_path + '?q=error', search_api_goals_path(q: 'error')) %></pre>
-      <div class="help-block">Parameters permitted: <code>q</code>, <code>page</code>, <code>per_page</code></div>
-      <div class="help-block">Click links below to see sample JSON responses for <%= link_to 'Demo User', user %></div>
-      <pre><%= link_to('/api/goals/id', api_goal_path(goal)) %></pre>
-      <pre><%= link_to('/api/goals/id/comments', comments_api_goal_path(goal)) %></pre>
-      <pre><%= link_to('/api/goals/id/scores', scores_api_goal_path(goal)) %></pre>
-      <pre><%= link_to('/api/goals/id/subscribers', subscribers_api_goal_path(goal)) %></pre>
-    </li>
-  </ul>
-</div>
-<div class="row">
-  <ul class="list-group">
-    <li class="list-group-item">
-      <h4>Users</h4>
-      <pre><%= link_to api_users_path, api_users_path %></pre>
-      <pre><%= link_to(search_api_users_path + '?q=Demo', search_api_users_path(q: 'Demo')) %></pre>
-      <div class="help-block">Parameters permitted: <code>q</code>, <code>page</code>, <code>per_page</code></div>
-      <div class="help-block">Click links below to see sample JSON responses for <%= link_to 'Demo User', user %></div>
-      <pre><%= link_to('/api/users/id', api_user_path(user)) %></pre>
-      <pre><%= link_to('/api/users/id/comments', comments_api_user_path(user)) %></pre>
-      <pre><%= link_to('/api/users/id/goals', goals_api_user_path(user)) %></pre>
-      <pre><%= link_to('/api/users/id/scores', scores_api_user_path(user)) %></pre>
-      <pre><%= link_to('/api/users/id/subscriptions', subscriptions_api_user_path(user)) %></pre>
-      <pre><%= link_to('/api/users/id/tokens', tokens_api_user_path(user)) %></pre>
-    </li>
-  </ul>
-</div>
+<%= cache do %>
+    <%= content_for :page_title, t('pages.api') %>
+    <% user = User.demo_user %>
+    <% goal = user.goals.with_highest_score %>
+    <%= render layout: 'layouts/list_group' do %>
+        <h4>Goals</h4>
+        <pre><%= link_to api_goals_path, api_goals_path %></pre>
+        <pre><%= link_to(search_api_goals_path + '?q=error', search_api_goals_path(q: 'error')) %></pre>
+        <div class="help-block">Parameters permitted: <code>q</code>, <code>page</code>, <code>per_page</code></div>
+        <div class="help-block">Click links below to see sample JSON responses
+          for <%= link_to 'Demo User', user %></div>
+        <pre><%= link_to('/api/goals/id', api_goal_path(goal)) %></pre>
+        <pre><%= link_to('/api/goals/id/comments', comments_api_goal_path(goal)) %></pre>
+        <pre><%= link_to('/api/goals/id/scores', scores_api_goal_path(goal)) %></pre>
+        <pre><%= link_to('/api/goals/id/subscribers', subscribers_api_goal_path(goal)) %></pre>
+    <% end %>
+    <%= render layout: 'layouts/list_group' do %>
+        <h4>Users</h4>
+        <pre><%= link_to api_users_path, api_users_path %></pre>
+        <pre><%= link_to(search_api_users_path + '?q=Demo', search_api_users_path(q: 'Demo')) %></pre>
+        <div class="help-block">Parameters permitted: <code>q</code>, <code>page</code>, <code>per_page</code>
+        </div>
+        <div class="help-block">Click links below to see sample JSON responses
+          for <%= link_to 'Demo User', user %></div>
+        <pre><%= link_to('/api/users/id', api_user_path(user)) %></pre>
+        <pre><%= link_to('/api/users/id/comments', comments_api_user_path(user)) %></pre>
+        <pre><%= link_to('/api/users/id/goals', goals_api_user_path(user)) %></pre>
+        <pre><%= link_to('/api/users/id/scores', scores_api_user_path(user)) %></pre>
+        <pre><%= link_to('/api/users/id/subscriptions', subscriptions_api_user_path(user)) %></pre>
+        <pre><%= link_to('/api/users/id/tokens', tokens_api_user_path(user)) %></pre>
+    <% end %>
+<% end %>
