--- a/app/views/users/_controls.html.erb
+++ b/app/views/users/_controls.html.erb
@@ -1,32 +1,22 @@
 <h5 align="center">
-  <% if current_page?(user) %>
+  <%= link_to_unless_current '<i class="glyphicon glyphicon-search"></i> Show'.html_safe, user do %>
       <i class="glyphicon glyphicon-search"></i> Show
-  <% else %>
-      <%= link_to user do %>
-          <i class="glyphicon glyphicon-search"></i> Show
-      <% end %>
   <% end %>
   <% if user_signed_in? %>
       <% if user == current_user %>
-          <% if current_page?(edit_user_registration_path) %>
+          | <%= link_to_unless_current '<i class="glyphicon glyphicon-pencil"></i> Edit'.html_safe, edit_user_registration_path do %>
               | <i class="glyphicon glyphicon-pencil"></i> Edit
-          <% else %>
-              | <%= link_to edit_user_registration_path do %><i class="glyphicon glyphicon-pencil"></i> Edit
-              <% end %>
           <% end %>
           | <%= link_to registration_path(user), data: {confirm: 'Are you sure?'}, method: :delete do %>
               <i class="glyphicon glyphicon-trash"></i> Deactivate
           <% end %>
       <% elsif current_user.admin? %>
-          <% if current_page?(edit_admin_user_path user) %>
-              | <i class="glyphicon glyphicon-pencil"></i> Edit
-          <% else %>
-              | <%= link_to edit_admin_user_path(user) do %><i class="glyphicon glyphicon-pencil"></i> Edit
-              <% end %>
+          | <%= link_to_unless_current '<i class="glyphicon glyphicon-pencil"></i> Edit'.html_safe, edit_admin_user_path(user) do %>
+              <i class="glyphicon glyphicon-pencil"></i> Edit
           <% end %>
           <% if user.active? %>
-              | <%= link_to admin_user_path(user), method: :delete do %><i class="glyphicon glyphicon-trash"></i>
-                  Deactivate
+              | <%= link_to admin_user_path(user), method: :delete do %>
+                  <i class="glyphicon glyphicon-trash"></i> Deactivate
               <% end %>
           <% else %>
               | <%= link_to admin_user_path(user, user: {status: :active}), method: :put do %>
