--- a/app/views/users/_dropdown_menu.html.erb
+++ b/app/views/users/_dropdown_menu.html.erb
@@ -1,77 +1,81 @@
-<ul class="dropdown-menu" role="menu">
-  <% if user_signed_in? %>
-      <% if user == current_user %>
-          <% if current_page? user %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'Show Profile', user %></li>
-          <% if current_page? edit_user_registration_path %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-          <li><%= link_to 'Deactivate Profile', registration_path(user), data: {confirm: 'Are you sure?'}, method: :delete %></li>
-      <% elsif current_user.admin? %>
-          <% if current_page? user %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'Show User', user %></li>
-          <% if current_page? edit_admin_user_path(user) %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'Edit User', edit_admin_user_path(user) %></li>
-          <% if user.active? %>
-              <li><%= link_to 'Deactivate User', admin_user_path(user), method: :delete %></li>
-          <% else %>
-              <li><%= link_to 'Activate User', user_path(user, user: {status: :active}), method: :put %></li>
-          <% end %>
-      <% end %>
-  <% else %>
-      <% if current_page? user %>
-          <li class="active">
-      <% else %>
-          <li>
-      <% end %><%= link_to 'Show User', user %></li>
-  <% end %>
-  <% if user.comments? or user.goals? or (user.score > 0) or user.subscriptions? or user.tokens? %>
-      <li class="divider"></li>
-      <% if user.comments? %>
-          <% if current_page? comments_user_path(user) %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'User Comments', comments_user_path(user) %></li>
-      <% end %>
-      <% if user.goals? %>
-          <% if current_page? goals_user_path(user) %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'User Goals', goals_user_path(user) %></li>
-      <% end %>
-      <% if user.score > 0 %>
-          <% if current_page? scores_user_path(user) %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'User Scores', scores_user_path(user) %></li>
-      <% end %>
-      <% if user.subscriptions? %>
-          <% if current_page? subscriptions_user_path(user) %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'User Subscriptions', subscriptions_user_path(user) %></li>
-      <% end %>
-      <% if user.tokens? %>
-          <% if current_page? tokens_user_path(user) %>
-              <li class="active">
-          <% else %>
-              <li>
-          <% end %><%= link_to 'User Tokens', tokens_user_path(user) %></li>
-      <% end %>
-  <% end %>
-</ul>
+<li class="active dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">User
+    <span class="caret"></span></a>
+  <ul class="dropdown-menu" role="menu">
+    <% if user_signed_in? %>
+        <% if @user == current_user %>
+            <% if current_page? user_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'Show Profile', user_path %></li>
+            <% if current_page? edit_user_registration_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+            <li><%= link_to 'Deactivate Profile', registration_path(@user), data: {confirm: 'Are you sure?'}, method: :delete %></li>
+        <% elsif current_user.admin? %>
+            <% if current_page? user_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'Show User', user_path %></li>
+            <% if current_page? edit_admin_user_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'Edit User', edit_admin_user_path %></li>
+            <% if @user.active? %>
+                <li><%= link_to 'Deactivate User', admin_user_path, method: :delete %></li>
+            <% else %>
+                <li><%= link_to 'Activate User', user_path(user: {status: :active}), method: :put %></li>
+            <% end %>
+        <% end %>
+    <% else %>
+        <% if current_page? user_path %>
+            <li class="active">
+        <% else %>
+            <li>
+        <% end %><%= link_to 'Show User', user_path %></li>
+    <% end %>
+    <% if @comments or @goals or @scores or @subscriptions or @tokens %>
+        <li class="divider"></li>
+        <% if @comments %>
+            <% if current_page? comments_user_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'User Comments', comments_user_path %></li>
+        <% end %>
+        <% if @goals %>
+            <% if current_page? goals_user_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'User Goals', goals_user_path %></li>
+        <% end %>
+        <% if @scores %>
+            <% if current_page? scores_user_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'User Scores', scores_user_path %></li>
+        <% end %>
+        <% if @subscriptions %>
+            <% if current_page? subscriptions_user_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'User Subscriptions', subscriptions_user_path %></li>
+        <% end %>
+        <% if @tokens %>
+            <% if current_page? tokens_user_path %>
+                <li class="active">
+            <% else %>
+                <li>
+            <% end %><%= link_to 'User Tokens', tokens_user_path %></li>
+        <% end %>
+    <% end %>
+  </ul>
+</li>
