--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,10 @@
-<%= content_for :page_title, I18n.t('users.title.index') %>
-<%= render @users %>
+<% cache ['v1', @users] do %>
+    <%= content_for :page_title, t('users.title.index') %>
+    <%= content_for :nav, render('form_search') %>
+    <% @users.each do |user| %>
+        <%= render layout: 'layouts/list_group' do %>
+            <%= render 'controls', user: user %>
+            <%= render user %>
+        <% end %>
+    <% end %>
+<% end %>
