--- a/app/views/users/subscriptions.html.erb
+++ b/app/views/users/subscriptions.html.erb
@@ -1,2 +1,10 @@
-<%= content_for :page_title, I18n.t('users.title.subscriptions') %>
-<%= render partial: 'goals/goal', collection: @subscriptions, as: :goal %>
+<% cache ['v1', @subscriptions] do %>
+    <%= content_for :page_title, t('users.title.subscriptions') %>
+    <%= content_for :nav, render('dropdown_menu') %>
+    <% @subscriptions.each do |goal| %>
+        <%= render layout: 'layouts/list_group' do %>
+            <%= render 'goals/controls', goal: goal %>
+            <%= render 'goals/goal', goal: goal %>
+        <% end %>
+    <% end %>
+<% end %>
