--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,15 +1,20 @@
-<div class="authform">
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name),
-               html: {method: :put, class: 'form-horizontal'}) do |f| %>
-      <h3>Change your password</h3>
-      <%= devise_error_messages! %>
-      <%= f.hidden_field :reset_password_token %>
-      <div class="form-group">
-        <%= f.label :password, 'New password' %>
-        <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
-        <%= f.label :password_confirmation, 'Confirm new password' %>
-        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
-      </div>
-      <%= f.submit 'Change my Password', class: 'button right' %>
-  <% end %>
-</div>
+<%= content_for :page_title, t('users.password.title.edit') %>
+<% content_for :nav, render('dropdown_menu') %>
+<%= devise_error_messages! %>
+<%= render layout: 'layouts/list_group' do %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name),
+                 html: {method: :put, class: 'form'}) do |f| %>
+        <div class="authform">
+          <h3>Change your password</h3>
+          <%= devise_error_messages! %>
+          <%= f.hidden_field :reset_password_token %>
+          <div class="form-group">
+            <%= f.label :password, 'New password' %>
+            <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
+            <%= f.label :password_confirmation, 'Confirm new password' %>
+            <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
+          </div>
+          <%= f.submit 'Change my Password', class: 'button right' %>
+        </div>
+    <% end %>
+<% end %>
