--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,14 +1,17 @@
-<div class="authform">
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name),
-               html: {method: :post, role: 'form', class: 'form-horizontal'}) do |f| %>
-      <h3>Forgot your password?</h3>
+<%= content_for :page_title, t('users.password.title.new') %>
+<%= devise_error_messages! %>
+<%= render layout: 'layouts/list_group' do %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name),
+                 html: {method: :post, role: 'form', class: 'form'}) do |f| %>
+        <div class="authform">
+          <h3>Forgot your password?</h3>
 
-      <p>We'll send password reset instructions.</p>
-      <%= devise_error_messages! %>
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-      </div>
-      <%= f.submit 'Reset Password', class: 'button right' %>
-  <% end %>
-</div>
+          <p>We'll send password reset instructions.</p>
+          <div class="form-group">
+            <%= f.label :email, class: 'control-label' %>
+            <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Email'  %>
+          </div>
+          <%= f.submit 'Reset Password', class: 'button right' %>
+        </div>
+    <% end %>
+<% end %>
